dnl (c) 2021 thatlittlegit
dnl This file is part of the atc project.
dnl Licensed under the GNU General Public License, version 3.0 only.
dnl SPDX-License-Identifier: GPL-3.0-only
AC_PREREQ([2.69])
AC_INIT([atc], [0.1], [<personal@thatlittlegit.tk>])
AC_CONFIG_SRCDIR([atc.c])
AC_LANG_WERROR
AC_PROG_CC

AC_CHECK_FUNC([clock_gettime])

AC_CONFIG_FILES([Makefile])
AC_CONFIG_HEADERS([config.h])
AC_OUTPUT
